--- a/index.html
+++ b/index.html
@@ -52,5 +52,37 @@
         </li>
       </ul>
     </div>
+
+    <div class="inputs">
+      <form>
+        <div class="inputs-top">
+          <div class="input-right">
+            First: <input type="text" name="first">
+          </div>
+          <div class="input-right">
+            Last: <input type="text" name="last">
+          </div>
+          <div class="input-right">
+            DOB(XX/XX/XXX): <input type="text" name="dob">
+          </div>
+        </div>
+        <br>
+        <div class="inputs-bottom">
+          Select these Choices:
+          <select>
+            <option value="choice-1">Choice 1</option>
+            <option value="choice-2">Choice 2</option>
+            <option value="choice-3">Choice 3</option>
+          </select><br>
+          <p>Textarea:</p>
+          <textarea rows="6" cols="34"></textarea><br>
+          Did you complete the form?:
+            Yes <input type="checkbox" value="yes">
+            No <input type="checkbox" value="no">
+            <br>
+          <input id="submit" type="button" value="Submit" onclick="alert('Ah! You clicked me!')">
+        </div>
+      </form>
+    </div>
   </body>
 </html>
