--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
+    <h1>Lindsey's Dope Web Dev Practice</h1>
+    <h2>Lists!</h2>
     <div class="list">
       <ul>
         <li class="item">
@@ -53,6 +55,7 @@
       </ul>
     </div>
 
+    <h2>Forms!</h2>
     <div class="inputs">
       <form>
         <div class="inputs-top">
