--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
+
     <h1>Lindsey's Dope Web Dev Practice</h1>
+
     <h2>Lists!</h2>
     <div class="list">
       <ul>
@@ -89,7 +91,7 @@
     </div>
 
     <div class="popover-stuff">
-      <h2 class="trigger">Popover Trigger</h2>
+      <h2 class="trigger">Popover Trigger!</h2>
       <div class="popover">
         <div class="arrow-up"></div>
         <div class="rectangle">
