remove brs from list

--- a/index.html
+++ b/index.html
@@ -15,42 +15,42 @@
     <div class="list">
       <ul>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">First Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Second Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a id="purple" href="">Purple</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Fourth Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Fifth Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Sixth Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Seventh Link</a>
           <p>Second line of text</p>
         </li>
         <li class="item">
-          <div class="kitty"></div><br>
+          <div class="kitty"></div>
           <a class="link" href="">Eighth Link</a>
           <p>Second line of text</p>
         </li>
