--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="popover">
         <div class="arrow-up"></div>
         <div class="rectangle">
-          <input class="popover-button" type="button" value="Button" onclick="alert('Ah! You clicked me too!')">
+          <input class="popover-button" type="button" value="Button">
         </div>
       </div>
     </div>
