some more clean up

--- a/index.html
+++ b/index.html
@@ -12,50 +12,48 @@
     <h1>Lindsey's Dope Web Dev Practice</h1>
 
     <h2>Lists!</h2>
-    <div class="list">
-      <ul>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">First Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Second Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a id="purple" href="">Purple</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Fourth Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Fifth Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Sixth Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Seventh Link</a>
-          <p>Second line of text</p>
-        </li>
-        <li class="item">
-          <div class="kitty"></div>
-          <a class="link" href="">Eighth Link</a>
-          <p>Second line of text</p>
-        </li>
-      </ul>
-    </div>
+    <ul class="list">
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">First Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Second Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a id="purple" href="">Purple</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Fourth Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Fifth Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Sixth Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Seventh Link</a>
+        <p>Second line of text</p>
+      </li>
+      <li class="item">
+        <div class="kitty"></div>
+        <a class="link" href="">Eighth Link</a>
+        <p>Second line of text</p>
+      </li>
+    </ul>
 
     <h2>Forms!</h2>
     <div class="inputs">
@@ -95,7 +93,7 @@
       <div class="popover">
         <div class="arrow-up"></div>
         <div class="rectangle">
-          <input class="popover-button" type="button" value="Button">
+          <input id="popover-button" type="button" value="Button">
         </div>
       </div>
     </div>
