wrap radio buttons with label

--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
       <label id="textarea-label" for="area">Textarea:</label>
       <textarea id="area"></textarea>
       <span>Did you complete the form?:</span>
-      <label for="yes">Yes</label>
-      <input name="complete" id="yes" type="radio" value="yes">
-      <label for="no">No</label>
-      <input name="complete" id="no" type="radio" value="no">
+      <label>Yes<input name="complete" type="radio" value="yes"></label>
+      <label>No<input name="complete" type="radio" value="no"></label>
       <input id="submit" type="button" value="Submit">
     </form>
 
